--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support:support-v4:24.1.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'org.litepal.android:core:1.4.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    
 }
