开始增加个人信息模块

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,9 @@
         </activity>
         <activity
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:name=".personalInfo.ExecPlanActivity"/>
+            android:name=".DistanceDisplay.ExecPlanActivity"/>
         <activity
-            android:name=".personalInfo.HistoryDistanceActivity"/>
+            android:name=".DistanceDisplay.HistoryDistanceActivity"/>
         
     </application>
 
