--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'org.litepal.android:core:1.4.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    
+    compile 'com.github.markushi:circlebutton:1.1'
 }
