--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -32,4 +32,7 @@ dependencies {
     compile 'org.litepal.android:core:1.4.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.markushi:circlebutton:1.1'
+    compile files('libs/BaiduTraceSDK_v2_1_16.jar')
+    compile files('libs/BaiduLBS_Android.jar')
+    compile 'com.google.code.gson:gson:2.3'
 }
