--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
+
+
+
     defaultConfig {
         applicationId "com.n1njac.yiqipao.android"
         minSdkVersion 15
@@ -35,4 +38,18 @@ dependencies {
     compile files('libs/BaiduTraceSDK_v2_1_16.jar')
     compile files('libs/BaiduLBS_Android.jar')
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
+
+//Bmob后端云
+    compile 'cn.bmob.android:bmob-sdk:3.5.0'
+    //bmob-push：Bmob的推送包
+    compile 'cn.bmob.android:bmob-push:0.8'
+    //bmob-im：Bmob的即时通讯包，注意每个版本的im依赖特定版本的bmob-sdk，具体的依赖关系可查看下面注释[2]
+    compile 'cn.bmob.android:bmob-im:2.0.5@aar'
+    compile 'cn.bmob.android:bmob-sdk:3.4.7-aar'
+    //bmob-sms ：Bmob单独为短信服务提供的包
+    compile 'cn.bmob.android:bmob-sms:1.0.1'
+    //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
+    compile 'cn.bmob.android:http-legacy:1.0'
+
 }
