--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         applicationId "com.n1njac.yiqipao.android"
         minSdkVersion 15
         targetSdkVersion 24
+        multiDexEnabled = true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -37,7 +38,7 @@ dependencies {
     compile 'com.github.markushi:circlebutton:1.1'
     compile files('libs/BaiduTraceSDK_v2_1_16.jar')
     compile files('libs/BaiduLBS_Android.jar')
-    compile 'com.google.code.gson:gson:2.3'
+//    compile 'com.google.code.gson:gson:2.3'
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
 
 //Bmob后端云
