--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
+        maven { url "https://jitpack.io" }
+
     }
 }
 
