增加登陆注册ui

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -123,7 +123,9 @@
             </intent-filter>
         </receiver>
 
-
+        <activity
+            android:theme="@style/AppTheme.TranslucentStatus"
+            android:name=".login.NewLoginActivity"/>
 
     </application>
 
