--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -124,6 +124,7 @@
         </receiver>
 
         <activity
+            android:windowSoftInputMode="adjustResize"
             android:theme="@style/AppTheme4"
             android:name=".login.NewLoginActivity"/>
 
