--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
     compile 'com.github.zzz40500:android-shapeLoadingView:1.0.3.2'
 
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
 }
