初步完成登录注册等逻辑处理

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -124,6 +124,7 @@
         </receiver>
 
         <activity
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustResize"
             android:theme="@style/AppTheme4"
             android:name=".login.NewLoginActivity"/>
