--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
 
         <activity
             android:label="@string/app_name"
-            android:name=".SplashActivity"
+            android:name=".ui.activity.SplashActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,22 +48,22 @@
 
         <activity
             android:theme="@style/AppTheme2"
-            android:name=".AboutActivity"/>
+            android:name=".ui.activity.AboutActivity"/>
         <activity
             android:theme="@style/AppTheme"
-            android:name=".MainActivity">
+            android:name=".ui.activity.MainActivity">
         </activity>
 
         <activity
-            android:name=".distanceDisplay.ExecPlanActivity"
+            android:name=".ui.activity.ExecPlanActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".distanceDisplay.HistoryDistanceActivity" />
+        <activity android:name=".ui.activity.HistoryDistanceActivity" />
         <activity android:name=".run.RunActivity" />
         <activity android:name=".run.trackshow.RunMainActivity"/>
         <activity
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:name=".nearybyview.NearbyMainActivity"/>
-        <activity android:name=".nearbychat.NearbyChatMainActivity"/>
+            android:name=".ui.activity.NearbyMainActivity"/>
+        <activity android:name=".ui.activity.NearbyChatMainActivity"/>
 
 
         <service
@@ -105,7 +105,7 @@
         </receiver>
 
         <!-- 第四部中创建的消息接收器，在这里进行注册 -->
-        <receiver android:name=".MyPushMessageReceiver">
+        <receiver android:name=".receiver.PushMessageReceiver">
             <intent-filter >
                 <action android:name="cn.bmob.push.action.MESSAGE"/>
             </intent-filter>
