--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,6 +128,7 @@
             android:theme="@style/AppTheme4"
             android:name=".login.NewLoginActivity"/>
 
+        <activity android:name=".ui.activity.UserRunRecordActivity" android:theme="@style/AppTheme4"/>
     </application>
 
 </manifest>
