--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ android {
     compileSdkVersion 24
     buildToolsVersion '25.0.0'
 
+    aaptOptions {
+        cruncherEnabled = false
+        useNewCruncher = false
+    }
 
 
     defaultConfig {
