--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storeFile file('C:/Users/Administrator/Desktop/debugkeystore/app.keystore')
+            storePassword 'android'
+        }
+    }
     compileSdkVersion 24
     buildToolsVersion '25.0.0'
-
     aaptOptions {
         cruncherEnabled = false
         useNewCruncher = false
     }
-
-
     defaultConfig {
         applicationId "com.n1njac.yiqipao.android"
         minSdkVersion 21
@@ -40,22 +45,17 @@ dependencies {
     compile 'org.litepal.android:core:1.4.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.markushi:circlebutton:1.1'
-
     //    compile 'com.google.code.gson:gson:2.3'
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
-
     //Bmob后端云
     compile 'cn.bmob.android:bmob-sdk:3.5.0'
     //bmob-sms ：Bmob单独为短信服务提供的包
-//    compile 'cn.bmob.android:bmob-sms:1.0.1'
+    //    compile 'cn.bmob.android:bmob-sms:1.0.1'
     //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
     compile 'cn.bmob.android:http-legacy:1.0'
     compile files('libs/Bmob_Push_V1.0.0beta_20160627.jar')
-
     compile 'com.github.ybq:Android-SpinKit:1.1.0'
     compile 'com.github.zzz40500:android-shapeLoadingView:1.0.3.2'
-
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
 }
