--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,6 +128,10 @@
         <service
             android:process=":gps"
             android:name=".runengine.GpsStatusRemoteService"/>
+
+        <service
+            android:process=":running"
+            android:name=".runengine.RunningCoreRemoteService"/>
     </application>
 
 </manifest>
