--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -123,11 +123,11 @@
             android:theme="@style/AppTheme4"
             android:name=".login.NewLoginActivity"/>
 
-        <activity android:name=".ui.activity.UserRunRecordActivity" android:theme="@style/AppTheme4"/>
+        <activity android:name=".ui.activity.UserRunActivity" android:theme="@style/AppTheme4"/>
 
         <activity
             android:theme="@style/AppTheme4"
-            android:name=".ui.activity.RunDataHistoryRecordActivity"/>
+            android:name=".ui.activity.HistoryRecordListActivity"/>
 
         <service
             android:process=":gps"
